# ProgrammingProblems

./: README.md  challenge  cleanup.py  revisit
EPI/: CMakeLists.txt  README.md
EPI/ch05_primitive_types/: 5_11_rectangle_intersection.cc  5_1_computing_parity.cc  5_2_swap_bits.cc  5_3_reverse_bits.cc  5_4_closest_integer_same_weight.cc  5_7_compute_pow_x_y.cc  5_8_reverse_digits.cc  5_9_int_is_palindrome.cc  CMakeLists.txt
EPI/ch06_arrays/: 6_11_sample_offline_data.cc  6_16_sudoku_checker.cc  6_17_spiral_ordering.cc  6_18_rotate_array.cc  6_1_Dutch_flag.cc  6_2_increment_int.cc  6_5_delete_duplicates_from_sorted_array.cc  6_6_buy_and_sell_stock_once.cc  CMakeLists.txt
EPI/ch07_strings/: 7_1_interconvert_str_int.cc  7_2_base_conversion.cc  7_4_replace_and_remove.cc  7_5_test_palindromicity.cc  7_6_reverse_all_words.cc  7_7_compute_mnemonics_phone_number.cc  7_8_the_look_and_say_problem.cc  CMakeLists.txt
EPI/ch08_linked_lists/: 8_10_even_odd_merge.cc  8_11_test_palindromic.cc  8_1_merge_two_sorted_lists.cc  8_2_reverse_linked_list.cc  8_2_reverse_single_sublist.cc  8_3_test_cyclicity.cc  8_4_test_overlapping_lists_no_cycle.cc  8_7_remove_kth_last_element.cc  CMakeLists.txt
EPI/ch09_stacks_and_queues/: 9_1_max_stack.cc  9_2_evaluate_rpn_expressions.cc  9_3_wellformedness.cc  9_4_normalize_pathnames.cc  9_7_binary_tree_nodes_inorder_increasing_depth.cc  9_8_circular_queue.cc  9_9_queue_stacks.cc  CMakeLists.txt
EPI/ch10_binary_trees/: 10_11_const_space_tree_traversal.cc  10_12_reconstruct_bt_from_pre_in_post.cc  10_1_is_height_balanced.cc  10_2_is_symmetric.cc  10_4_lca_parent.cc  CMakeLists.txt
EPI/ch11_heaps/: 11_1_merge_sorted_files.cc  11_3_sort_almost_sorted_array.cc  11_4_k_closest_stars.cc  11_5_compute_median_online_data.cc  11_7_queue_with_heap.cc  11_7_stack_with_heap.cc  CMakeLists.txt
EPI/ch12_searching/: 12_1_search_sorted_array_for_first_occurence.cc  12_3_search_cyclically_sorted_array.cc  12_4_compute_int_sqrt.cc  12_5_compute_real_sqrt.cc  12_6_search_in_2d_sorted_array.cc  12_8_kth_largest_element.cc  12_9_find_missing_ip_addr.cc  CMakeLists.txt
EPI/ch13_hash_tables/: 13_10_len_of_longest_contained_interval.cc  13_2_anonymous_letter_constructible.cc  13_3_ISBN_cache.cc  13_4_compute_LCA.cc  13_6_find_nearest_repeated_entries_in_array.cc  13_7_find_the_smallest_subarray_covering_all_values.cc  CMakeLists.txt  cmake_install.cmake
EPI/ch14_sorting/: 14_1_compute_intersection_two_sorted_arrays.cc  14_2_merge_two_sorted_arrays.cc  14_4_render_calendar.cc  14_5_merge_intervals.cc  14_6_union_of_intervals.cc  14_9_fast_sorting_lists.cc  CMakeLists.txt
EPI/ch15_binary_search_trees/: 15_10_bst_insertion_deletion.cc  15_1_validate_bst_property.cc  15_2_find_first_key_greater.cc  15_3_k_largest_element_in_bst.cc  15_4_LCA_BST.cc  15_5_reconstruct_bst.cc  15_7_enumerate_numbers.cc  15_9_min_height_bst_from_sorted_array.cc  CMakeLists.txt
EPI/ch16_recursion/: 16_10_compute_gray_code.cc  16_1_towers_of_hanoi.cc  16_2_n_attacking_queens.cc  16_3_generate_permutations.cc  16_4_generate_power_set.cc  16_5_generate_all_subsets_size_k.cc  16_6_generate_matched_parens.cc  16_7_generate_palindromic_decompositions.cc  16_9_sudoku_solver.cc  CMakeLists.txt
EPI/ch17_dp/: 17_12_longest_nondecreasing_subsequence.cc  17_1_number_of_score_combinations.cc  17_2_levenshtein_dist.cc  17_3_ways_to_traverse_2D_array.cc  17_5_search_sequence_2D_array.cc  17_6_knapsack.cc  17_7_bedbathandbeyond.cc  CMakeLists.txt
EPI/ch18_greedy_invariants/: 18_4_3_sum.cc  18_5_find_majority.cc  18_6_gasup_problem.cc  18_7_max_water_trapped.cc  18_8_compute_largest_rect.cc  3_sum.cc  CMakeLists.txt
EPI/ch19_graphs/: 19_1_search_a_maze.cc  19_2_paint_boolean_matrix.cc  19_3_enclosed_regions.cc  19_7_transform_one_string_to_another.cc  19_9_shortest_path_with_fewest_edges.cc  CMakeLists.txt
EPI/data_structures/: binary_tree.hpp  doubly_linked_list.hpp  singly_linked_list.hpp
EPI/misc_practice/: CMakeLists.txt  binary_search_lab.cc  graph_modeling_example.cc  hash_table_lab.cc  hello_world.cc  partitioning.cc  recursion_practice.cc  sss_path.cc
misc/: AC_P1.cc  AC_P2.cc  AC_P3.cc  AkunaCapital_P1.cc  AkunaCapital_P2.cc  AkunaCapital_P3.cc  CMakeLists.txt  HRT_Task1.cc  HRT_Task2.cc  HRT_Task3.cc  OCVM.cc  OC_DNA_Seq  OC_DNA_Seq.cc  SIG_2.cc  TS_01Multiple.cc  TS_MinTotalElectricityUsage.cc  closest_points.cc  convex_hull.cc  eg_1.cc  eg_2.cc  vg_1.cc  vg_2.cc  vg_3.cc
the-daily-byte/: CMakeLists.txt  README.md
the-daily-byte/ad_hoc/: CMakeLists.txt  add_binary.cc  compression.cc  correct_capitalization.cc  defang_ip.cc  even_odd_array_shuffle.cc  first_unique_character.cc  greater_elements.cc  hamming_distance.cc  intersection_of_numbers.cc  is_monotonic.cc  is_valid_palindrome.cc  jewels_and_stones.cc  keyboard_row.cc  longest_common_prefix.cc  lunchtime.cc  popsicle_stand.cc  product_except.cc  rearrange_elements.cc  removing_vowels.cc  spot_the_difference.cc  string_reverse.cc  throwing_stones.cc  two_sum.cc  uncommon_words.cc  vacuum_cleaner.cc  valid_anagram.cc  valid_palindrome_with_removal.cc
the-daily-byte/data_structures/: bst_node.h  bst_tree.hpp  nary_tree.h  singly_linked_node.cc  singly_linked_node.h
the-daily-byte/dynamic_programming/: CMakeLists.txt  min_path.cc  predict_winner.cc  stair_master.cc
the-daily-byte/graph_problems/: CMakeLists.txt  count_islands.cc  distance_to_rabbit_holes.cc  travel_to_points.cc
the-daily-byte/greedy_problems/: CMakeLists.txt  flight_prices.cc  life_rafts.cc  max_points.cc  moving_bricks.cc
the-daily-byte/linked_list_problems/: CMakeLists.txt  contains_cycle.cc  find_mid_element.cc  merge_linked_lists.cc  remove_n_to_last_node.cc  remove_value.cc  return_start_cycle.cc  reverse_list.cc
the-daily-byte/object_oriented_design/: CMakeLists.txt  call_counter.cc  moving_average.cc  queue_stack.cc
the-daily-byte/recursion/: CMakeLists.txt  generate_parentheses.cc  generate_text_message.cc  gold_rush.cc  palindrome_splitting.cc  string_permutation.cc  unique_combinations.cc  word_search.cc
the-daily-byte/tree_problems/: lca.cc  (+24 more)
(+183 files in other folders)
