cmake_minimum_required(VERSION 3.10)

# add_executable(call_counter call_counter.cc)
# add_executable(moving_average moving_average.cc)
# add_executable(queue_stack queue_stack.cc)

add_executable(5_1_computing_parity 5_1_computing_parity.cc)
add_executable(5_7_compute_pow_x_y 5_7_compute_pow_x_y.cc)
add_executable(5_8_reverse_digits 5_8_reverse_digits.cc)
add_executable(5_3_reverse_bits 5_3_reverse_bits.cc)
add_executable(5_9_int_is_palindrome 5_9_int_is_palindrome.cc)
