cmake_minimum_required(VERSION 3.10)

add_executable(7_1_interconvert_str_int 7_1_interconvert_str_int.cc)
add_executable(7_2_base_conversion 7_2_base_conversion.cc)
add_executable(7_4_replace_and_remove 7_4_replace_and_remove.cc)
add_executable(7_5_test_palindromicity 7_5_test_palindromicity.cc)
add_executable(7_6_reverse_all_words 7_6_reverse_all_words.cc)
add_executable(7_7_compute_mnemonics_phone_number 7_7_compute_mnemonics_phone_number.cc)
add_executable(7_8_the_look_and_say_problem 7_8_the_look_and_say_problem.cc)
