cmake_minimum_required(VERSION 3.10)

set (INCLUDE_DIR ../data_structures/)
include_directories(${INCLUDE_DIR})

add_executable(14_1_compute_intersection_two_sorted_arrays 14_1_compute_intersection_two_sorted_arrays.cc)
add_executable(14_2_merge_two_sorted_arrays 14_2_merge_two_sorted_arrays.cc)
add_executable(14_4_render_calendar 14_4_render_calendar.cc)
add_executable(14_5_merge_intervals 14_5_merge_intervals.cc)
