cmake_minimum_required(VERSION 3.10)

set (INCLUDE_DIR ../data_structures/)
include_directories(${INCLUDE_DIR})

add_executable(15_1_validate_bst_property 15_1_validate_bst_property.cc)
add_executable(15_2_find_first_key_greater 15_2_find_first_key_greater.cc)
add_executable(15_3_k_largest_element_in_bst 15_3_k_largest_element_in_bst.cc)
add_executable(15_4_LCA_BST 15_4_LCA_BST.cc)
add_executable(15_5_reconstruct_bst 15_5_reconstruct_bst.cc)
add_executable(15_9_min_height_bst_from_sorted_array 15_9_min_height_bst_from_sorted_array.cc)
add_executable(15_10_bst_insertion_deletion 15_10_bst_insertion_deletion.cc)
