cmake_minimum_required(VERSION 3.10)

set (INCLUDE_DIR ../data_structures/)
include_directories(${INCLUDE_DIR})

add_executable(17_1_number_of_score_combinations 17_1_number_of_score_combinations.cc)
add_executable(17_2_levenshtein_dist 17_2_levenshtein_dist.cc)
add_executable(17_3_ways_to_traverse_2D_array 17_3_ways_to_traverse_2D_array.cc)
add_executable(17_6_knapsack 17_6_knapsack.cc)
