cmake_minimum_required(VERSION 3.10)

set (INCLUDE_DIR ../data_structures/)
include_directories(${INCLUDE_DIR})

add_executable(19_1_search_a_maze 19_1_search_a_maze.cc)
add_executable(19_2_paint_boolean_matrix 19_2_paint_boolean_matrix.cc)
add_executable(19_3_enclosed_regions 19_3_enclosed_regions.cc)
add_executable(19_7_transform_one_string_to_another 19_7_transform_one_string_to_another.cc)
