cmake_minimum_required(VERSION 3.10)

add_executable(correct_capitalization correct_capitalization.cc)
add_executable(is_valid_palindrome is_valid_palindrome.cc)
add_executable(string_reverse string_reverse.cc)
add_executable(vacuum_cleaner vacuum_cleaner.cc)
add_executable(add_binary add_binary.cc)
add_executable(longest_common_prefix longest_common_prefix.cc)
add_executable(valid_palindrome_with_removal valid_palindrome_with_removal.cc)
add_executable(two_sum two_sum.cc)
add_executable(jewels_and_stones jewels_and_stones.cc)
add_executable(valid_anagram valid_anagram.cc)
add_executable(first_unique_character first_unique_character.cc)
add_executable(spot_the_difference spot_the_difference.cc)
add_executable(intersection_of_numbers intersection_of_numbers.cc)
add_executable(uncommon_words uncommon_words.cc)
add_executable(greater_elements greater_elements.cc)
add_executable(throwing_stones throwing_stones.cc)
add_executable(popsicle_stand popsicle_stand.cc)
add_executable(lunchtime lunchtime.cc)
add_executable(defang_ip defang_ip.cc)
add_executable(hamming_distance hamming_distance.cc)
add_executable(removing_vowels removing_vowels.cc)
add_executable(rearrange_elements rearrange_elements.cc)
add_executable(product_except product_except.cc)
add_executable(even_odd_array_shuffle even_odd_array_shuffle.cc)
add_executable(is_monotonic is_monotonic.cc)
add_executable(keyboard_row keyboard_row.cc)
