cmake_minimum_required(VERSION 3.10)

#add_library(SINGLY_LINKED_LIST ../data_structures/singly_linked_node.h ../data_structures/singly_linked_node.cc)

add_executable(string_permutation string_permutation.cc)
add_executable(generate_text_message generate_text_message.cc)
add_executable(word_search word_search.cc)
add_executable(gold_rush gold_rush.cc)
add_executable(unique_combinations unique_combinations.cc)
add_executable(palindrome_splitting palindrome_splitting.cc)
